# malnutrition-risk

./: .env.example  .gitattributes  .gitignore  pyproject.toml
conf/: config.yaml  eval.yaml  promote.yaml
conf/data_prep/: default.yaml
conf/dataset/: population_profiles.yaml
conf/experiment/: lgbm_v1.yaml
conf/feature_engineering/: base.yaml
conf/model/: lightgbm.yaml  logistic_regression.yaml
conf/preprocessor/: classic.yaml  tree.yaml
conf/search_space/: lightgbm.yaml  logistic_regression.yaml
conf/training/: default.yaml  quick.yaml
orchestration/: 01_curate_data.py  02_split_data.py  evaluate.py  promote.py  train.py
src/malnutrition_risk/: features.py  pipeline.py  utils.py
src/malnutrition_risk/core/: artifacts.py  model_io.py  scoring.py  tracking.py
src/malnutrition_risk/data/: curator.py  loading.py  splitter.py
src/malnutrition_risk/evaluation/: explain.py  metrics.py  plots.py  runner.py  schemas.py
src/malnutrition_risk/training/: optimizer.py  runner.py  schemas.py  search_space.py  study.py
